sample/retrieveUnpackaged/objects/Credit_Card_Proxy__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Credit Card Proxies</relationshipLabel>
        <relationshipName>Credit_Card_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CVN__c</fullName>
        <label>CVN</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number_1__c</fullName>
        <label>Credit Card Number 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number_2__c</fullName>
        <label>Credit Card Number 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number_3__c</fullName>
        <label>Credit Card Number 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Card Proxies</relationshipLabel>
        <relationshipName>Credit_Card_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DD_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_No__c</fullName>
        <label>Account No</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_BSB_No__c</fullName>
        <label>BSB No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Commence_Date__c</fullName>
        <label>Direct Debit Commence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Financial_Institution__c</fullName>
        <label>Financial Institution</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Month__c</fullName>
        <label>Expiry Date</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Card__c</fullName>
        <label>Name on Card</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Message__c</fullName>
        <label>Payment Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Card Proxies</relationshipLabel>
        <relationshipName>Credit_Card_Proxies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reciept_Number__c</fullName>
        <label>Reciept Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isDirectDebit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDirectDebit</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Card Proxy</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Credit Card Proxy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Proxies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>